Packages/Dojo/Runtime/bindings/dojo.h

typedef enum ComparisonOperator {
  Eq,
  Neq,
  Gt,
  Gte,
  Lt,
  Lte,
} ComparisonOperator;
typedef struct Error {
  char *message;
} Error;
typedef struct CArray______c_char {
  const char **data;
  uintptr_t data_len;
} CArray______c_char;
typedef struct KeysClause {
  const char *model;
  struct CArray______c_char keys;
} KeysClause;
typedef struct FieldElement {
  uint8_t data[32];
} FieldElement;
typedef enum Primitive_Tag {
  U8,
  U16,
  U32,
  U64,
  U128,
  U256,
  USize,
  PBool,
  Felt252,
  ClassHash,
  ContractAddress,
} Primitive_Tag;
typedef struct Primitive {
  Primitive_Tag tag;
  union {
    struct {
      uint8_t u8;
    };
    struct {
      uint16_t u16;
    };
    struct {
      uint32_t u32;
    };
    struct {
      uint64_t u64;
    };
    struct {
      uint8_t u128[16];
    };
    struct {
      uint64_t u256[4];
    };
    struct {
      uint32_t u_size;
    };
    struct {
      bool p_bool;
    };
    struct {
      struct FieldElement felt252;
    };
    struct {
      struct FieldElement class_hash;
    };
    struct {
      struct FieldElement contract_address;
    };
  };
} Primitive;
typedef struct Member {
  const char *name;
  struct Ty *ty;
  bool key;
} Member;
typedef struct CArray_Member {
  struct Member *data;
  uintptr_t data_len;
} CArray_Member;
typedef struct Struct {
  const char *name;
  struct CArray_Member children;
} Struct;
typedef struct EnumOption {
  const char *name;
  struct Ty *ty;
} EnumOption;
typedef struct CArray_EnumOption {
  struct EnumOption *data;
  uintptr_t data_len;
} CArray_EnumOption;
typedef struct Enum {
  const char *name;
  uint8_t option;
  struct CArray_EnumOption options;
} Enum;
typedef struct CArray_Ty {
  struct Ty *data;
  uintptr_t data_len;
} CArray_Ty;
typedef enum Ty_Tag {
  TyPrimitive,
  TyStruct,
  TyEnum,
  TyTuple,
} Ty_Tag;
typedef struct Ty {
  Ty_Tag tag;
  union {
    struct {
      struct Primitive ty_primitive;
    };
    struct {
      struct Struct ty_struct;
    };
    struct {
      struct Enum ty_enum;
    };
    struct {
      struct CArray_Ty ty_tuple;
    };
  };
} Ty;
typedef struct Model {
  const char *name;
  struct CArray_Member members;
} Model;
typedef struct ValueType {
  ValueType_Tag tag;
  union {
    struct {
      const char *v_string;
    };
    struct {
      int64_t int_;
    };
    struct {
      uint64_t u_int;
    };
    struct {
      bool v_bool;
    };
    struct {
      struct CArray_u8 bytes;
    };
  };
} ValueType;
typedef struct Value {
  struct Primitive primitive_type;
  struct ValueType value_type;
} Value;
typedef struct MemberClause {
  const char *model;
  const char *member;
  enum ComparisonOperator operator_;
  struct Value value;
} MemberClause;
typedef struct CArray_FieldElement {
  struct FieldElement *data;
  uintptr_t data_len;
} CArray_FieldElement;
typedef struct ModelMetadata {
  struct Ty schema;
  const char *name;
  uint32_t packed_size;
  uint32_t unpacked_size;
  struct FieldElement class_hash;
  struct CArray_FieldElement layout;
} ModelMetadata;