Packages/Dojo/Runtime/bindings/client/dojo.gen.cs


                    _options = new CArray_EnumOption();
                    _options.data_len = (UIntPtr)value.Length;
                    fixed (EnumOption* ptr = value)
                    {
                        _options.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct EnumOption
        {
            [FieldOffset(0)] // size = 8
            public CString _name;

            public string name
            {
                get
                {
                    return CString.ToString(_name);
                }
                set
                {
                    _name = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 8
            public Ty* _ty;

            public Ty ty
            {
                get
                {
                    return *_ty;
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 8, Pack = 8)]
        public struct Error
        {
            [FieldOffset(0)] // size = 8
            public CString _message;

            public string message
            {
                get
                {
                    return CString.ToString(_message);
                }
                set
                {
                    _message = CString.FromString(value);
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 1)]
        public struct FieldElement
        {
            [FieldOffset(0)] // size = 32
            public fixed byte _data[32]; // uint8_t[32]

            public readonly Span<byte> data
            {
                get
                {
                    fixed (FieldElement* @this = &this)
                    {
                        var pointer = &@this->_data[0];
                        var span = new Span<byte>(pointer, 32);
                        return span;
                    }
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 24, Pack = 8)]
        public struct KeysClause
        {
            [FieldOffset(0)] // size = 8
            public CString _model;

            public string model
            {
                get
                {
                    return CString.ToString(_model);
                }
                set
                {
                    _model = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 16
            public CArray______c_char _keys;

            public Span<string> keys
            {
                get
                {
                    fixed (KeysClause* @this = &this)
                    {
                        var span = new Span<CString>(@this->_keys.data, (int)@this->_keys.data_len);
                        return span.ToArray().Select(str => CString.ToString(str)).ToArray();
                    }
                }

                set
                {
                    var strings = value.ToArray().Select(str => CString.FromString(str)).ToArray();
                    _keys = new CArray______c_char();
                    _keys.data_len = (UIntPtr)value.Length;
                    fixed (CString* ptr = strings)
                    {
                        _keys.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 24, Pack = 8)]
        public struct Member
        {
            [FieldOffset(0)] // size = 8
            public CString _name;

            public string name
            {
                get
                {
                    return CString.ToString(_name);
                }
                set
                {
                    _name = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 8
            public Ty* _ty;

            public Ty ty
            {
                get
                {
                    return *_ty;
                }
            }

            [FieldOffset(16)] // size = 1
            public CBool key;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 88, Pack = 8)]
        public struct MemberClause
        {
            [FieldOffset(0)] // size = 8
            public CString _model;

            public string model
            {
                get
                {
                    return CString.ToString(_model);
                }
                set
                {
                    _model = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 8
            public CString _member;

            public string member
            {
                get
                {
                    return CString.ToString(_member);
                }
                set
                {
                    _member = CString.FromString(value);
                }
            }

            [FieldOffset(16)] // size = 4
            public ComparisonOperator operator_;

            [FieldOffset(24)] // size = 64
            public Value value;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 24, Pack = 8)]
        public struct Model
        {
            [FieldOffset(0)] // size = 8
            public CString _name;

            public string name
            {
                get
                {
                    return CString.ToString(_name);
                }
                set
                {
                    _name = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 16
            public CArray_Member _members;

            public Span<Member> members
            {
                get
                {
                    fixed (Model* @this = &this)
                    {
                        var span = new Span<Member>(@this->_members.data, (int)@this->_members.data_len);
                        return span;
                    }
                }

                set
                {

                    _members = new CArray_Member();
                    _members.data_len = (UIntPtr)value.Length;
                    fixed (Member* ptr = value)
                    {
                        _members.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 112, Pack = 8)]
        public struct ModelMetadata
        {
            [FieldOffset(0)] // size = 48
            public Ty schema;

            [FieldOffset(48)] // size = 8
            public CString _name;

            public string name
            {
                get
                {
                    return CString.ToString(_name);
                }
                set
                {
                    _name = CString.FromString(value);
                }
            }

            [FieldOffset(56)] // size = 4
            public uint packed_size;

            [FieldOffset(60)] // size = 4
            public uint unpacked_size;

            [FieldOffset(64)] // size = 32
            public FieldElement class_hash;

            [FieldOffset(96)] // size = 16
            public CArray_FieldElement _layout;

            public Span<FieldElement> layout
            {
                get
                {
                    fixed (ModelMetadata* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_layout.data, (int)@this->_layout.data_len);
                        return span;
                    }
                }

                set
                {

                    _layout = new CArray_FieldElement();
                    _layout.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _layout.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 40, Pack = 8)]
        public struct Primitive
        {
            [FieldOffset(0)] // size = 4
            public Primitive_Tag tag;

            [FieldOffset(8)] // size = 1
            public byte u8;

            [FieldOffset(8)] // size = 2
            public ushort u16;

            [FieldOffset(8)] // size = 4
            public uint u32;

            [FieldOffset(8)] // size = 8
            public ulong u64;

            [FieldOffset(8)] // size = 16
            public fixed byte _u128[16]; // uint8_t[16]

            public readonly Span<byte> u128
            {
                get
                {
                    fixed (Primitive* @this = &this)
                    {
                        var pointer = &@this->_u128[0];
                        var span = new Span<byte>(pointer, 16);
                        return span;
                    }
                }
            }

            [FieldOffset(8)] // size = 32
            public fixed byte _u256[32]; // uint64_t[4]

            public readonly Span<ulong> u256
            {
                get
                {
                    fixed (Primitive* @this = &this)
                    {
                        var pointer = &@this->_u256[0];
                        var span = new Span<ulong>(pointer, 4);
                        return span;
                    }
                }
            }

            [FieldOffset(8)] // size = 4
            public uint u_size;

            [FieldOffset(8)] // size = 1
            public CBool p_bool;

            [FieldOffset(8)] // size = 32
            public FieldElement felt252;

            [FieldOffset(8)] // size = 32
            public FieldElement class_hash;

            [FieldOffset(8)] // size = 32
            public FieldElement contract_address;
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct Primitive_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 1
            public byte u8;

            [FieldOffset(0)] // size = 2
            public ushort u16;

            [FieldOffset(0)] // size = 4
            public uint u32;

            [FieldOffset(0)] // size = 8
            public ulong u64;

            [FieldOffset(0)] // size = 16
            public fixed byte _u128[16]; // uint8_t[16]

            public readonly Span<byte> u128
            {
                get
                {
                    fixed (Primitive_ANONYMOUS_FIELD1* @this = &this)
                    {
                        var pointer = &@this->_u128[0];
                        var span = new Span<byte>(pointer, 16);
                        return span;
                    }
                }
            }

            [FieldOffset(0)] // size = 32
            public fixed byte _u256[32]; // uint64_t[4]

            public readonly Span<ulong> u256
            {
                get
                {
                    fixed (Primitive_ANONYMOUS_FIELD1* @this = &this)
                    {
                        var pointer = &@this->_u256[0];
                        var span = new Span<ulong>(pointer, 4);
                        return span;
                    }
                }
            }

            [FieldOffset(0)] // size = 4
            public uint u_size;

            [FieldOffset(0)] // size = 1
            public CBool p_bool;

            [FieldOffset(0)] // size = 32
            public FieldElement felt252;

            [FieldOffset(0)] // size = 32
            public FieldElement class_hash;
